# agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  OPTIMIZATION_SUGGESTIONS.md  README.md  SOUL.md  agent.py  build.sh  build.spec  get_costmap_to_dingtalk.py  mcp_server.py  pyproject.toml  requirements.txt  schedules.json
.claude/: settings.local.json
config/: PROMPT.md  SOUL.md  config.example.json  dingtalk.json  jwt_secret  kanban.json  llm_endpoints.example.json  mcp_servers.json  sandbox.json  schedules.json  task_panel.json
config/agents/: 小智.md  (+2 more)
docs/: OPTIMIZATION_SUGGESTIONS.md  PROMPT_OPTIMIZATION_SUGGESTIONS.md  architecture.md  development.md  grok-build-analysis.md
mcp_server/: README.md  requirements.txt
sandbox/: Dockerfile
scripts/: build.bat  build.ps1  check_imports.py
src/: adversarial.py  agent.py  agent_ignore.py  agent_loader.py  agent_pool.py  agent_session.py  bootstrap.py  cache.py  cli.py  cmd_handler.py  config.py  error_classifier.py  git_integration.py  interactive.py  llm.py  main.py  mcp_server.py  multi_agent.py  plan_mode.py  prompt.py  quality_hooks.py  rbac.py  resume_manager.py  sandbox_policy.py  scheduler.py  session_store.py  settings.py  skillify.py  storage.py  subagent.py  subagent_manager.py  tool_result_compressor.py  tracing.py  undo_manager.py  usage.py  worktree.py
tests/: conftest.py
tmp/: reflective.py
workspace/: PROMPT.md  architecture.md  dingtalk.json  dingtalk.json.example  feishu.json  mcp_servers.json  requirements.md  schedules.json  security_report.md  task_panel.json  webhook.json
(+338 files in other folders)
